--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libnetfilter-conntrack (0.0.50-1) UNRELEASED; urgency=low
 
   * new upstream release
+  * build-depend on libnfnetlink-dev 0.0.25
 
  -- Max Kellermann <max@duempel.org>  Wed, 17 Jan 2007 16:22:02 +0100
 
