--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-libnetfilter-conntrack (0.0.50-1) UNRELEASED; urgency=low
+libnetfilter-conntrack (0.0.50-1) unstable; urgency=low
 
-  * new upstream release
+  * new upstream release (Closes: #414661)
   * build-depend on libnfnetlink-dev 0.0.25
 
- -- Max Kellermann <max@duempel.org>  Wed, 17 Jan 2007 16:22:02 +0100
+ -- Max Kellermann <max@duempel.org>  Tue, 13 Mar 2007 08:22:02 +0100
 
 libnetfilter-conntrack (0.0.31-1) unstable; urgency=low
 
