--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libnetfilter-conntrack (0.0.75-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Alexander Wirt <formorer@debian.org>  Fri, 25 May 2007 11:20:41 +0200
+
 libnetfilter-conntrack (0.0.50-1) unstable; urgency=low
 
   * new upstream release (Closes: #414661)
