--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 libnetfilter-conntrack (0.0.81-1) UNRELEASED; urgency=low
 
+  [ Max Kellermann ]
   * new upstream release
 
- -- Max Kellermann <max@duempel.org>  Tue,  6 Nov 2007 07:45:36 +0100
+  [ Alexander Wirt ]
+  * Fix distclean call 
+
+ -- Alexander Wirt <formorer@debian.org>  Mon, 12 Nov 2007 11:47:56 +0100
 
 libnetfilter-conntrack (0.0.75-1) unstable; urgency=low
 
