--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,13 @@
-libnetfilter-conntrack (0.0.81-1) UNRELEASED; urgency=low
+libnetfilter-conntrack (0.0.81-1) unstable; urgency=low
 
   [ Max Kellermann ]
   * new upstream release
 
   [ Alexander Wirt ]
   * Fix distclean call
-  * Make package Bin NMU safe 
+  * Make package Bin NMU safe
 
- -- Alexander Wirt <formorer@debian.org>  Mon, 12 Nov 2007 11:49:06 +0100
+ -- Alexander Wirt <formorer@debian.org>  Mon, 12 Nov 2007 13:21:00 +0100
 
 libnetfilter-conntrack (0.0.75-1) unstable; urgency=low
 
