--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libnetfilter-conntrack (0.0.82-1) UNRELEASED; urgency=low
+
+  * new upstream release
+
+ -- Max Kellermann <max@duempel.org>  Thu,  3 Jan 2008 19:04:02 +0100
+
 libnetfilter-conntrack (0.0.81-1) unstable; urgency=low
 
   [ Max Kellermann ]
