--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libnetfilter-conntrack (0.0.82-1) UNRELEASED; urgency=low
 
   * new upstream release
+  * bumped Standards-Version to 3.7.3
 
  -- Max Kellermann <max@duempel.org>  Thu,  3 Jan 2008 19:04:02 +0100
 
