--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
-libnetfilter-conntrack (0.0.82-1) UNRELEASED; urgency=low
+libnetfilter-conntrack (0.0.82-1) unstable; urgency=low
 
+  [ Max Kellermann ]
   * new upstream release
     - shlibs version set to 0.0.82 because of API additions
   * bumped Standards-Version to 3.7.3
   * added Homepage header to debian/control
 
- -- Max Kellermann <max@duempel.org>  Thu,  3 Jan 2008 19:04:02 +0100
+ -- Alexander Wirt <formorer@debian.org>  Mon, 07 Jan 2008 10:16:05 +0100
 
 libnetfilter-conntrack (0.0.81-1) unstable; urgency=low
 
