build-depend on libtool

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 libnetfilter-conntrack (0.0.89-1) UNRELEASED; urgency=low
 
   * new upstream release
+  * build-depend on libtool
 
  -- Max Kellermann <max@duempel.org>  Fri,  7 Mar 2008 19:57:04 +0100
 
