--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-libnetfilter-conntrack (0.0.89-1) UNRELEASED; urgency=low
+libnetfilter-conntrack (0.0.89-1) unstable; urgency=low
 
+  [ Max Kellermann ]
   * new upstream release
     - /usr/lib/libnetfilter_conntrack was removed
   * build-depend on libtool
 
- -- Max Kellermann <max@duempel.org>  Fri,  7 Mar 2008 19:57:04 +0100
+ -- Alexander Wirt <formorer@debian.org>  Fri, 21 Mar 2008 22:36:24 +0100
 
 libnetfilter-conntrack (0.0.82-1) unstable; urgency=low
 
