--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-libnetfilter-conntrack (0.0.94-1) UNRELEASED; urgency=low
+libnetfilter-conntrack (0.0.94-1) unstable; urgency=low
 
+  [ Max Kellermann ]
   * new upstream release
 
- -- Max Kellermann <max@duempel.org>  Mon, 02 Jun 2008 16:24:11 +0200
+ -- Alexander Wirt <formorer@debian.org>  Tue, 22 Jul 2008 23:02:55 +0200
 
 libnetfilter-conntrack (0.0.89-1) unstable; urgency=low
 
