--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,10 @@ libnetfilter-conntrack (0.0.96-1) unstable; urgency=low
   [ Max Kellermann ]
   * new upstream release
 
- -- Alexander Wirt <formorer@debian.org>  Tue, 22 Jul 2008 23:02:55 +0200
+  [ Alexander Wirt ]
+  * Bump standards version (No changes) 
+
+ -- Alexander Wirt <formorer@debian.org>  Tue, 22 Jul 2008 23:22:33 +0200
 
 libnetfilter-conntrack (0.0.89-1) unstable; urgency=low
 
