--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libnetfilter-conntrack (0.0.98-1) UNRELEASED; urgency=low
+
+  * new upstream release
+
+ -- Max Kellermann <max@duempel.org>  Fri, 12 Dec 2008 08:05:28 +0100
+
 libnetfilter-conntrack (0.0.97-1) unstable; urgency=low
 
   [ Max Kellermann ]
