--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-libnetfilter-conntrack (0.0.98-1) UNRELEASED; urgency=low
+libnetfilter-conntrack (0.0.99-1) UNRELEASED; urgency=low
 
-  * new upstream release
+  * New upstream release
 
- -- Max Kellermann <max@duempel.org>  Fri, 12 Dec 2008 08:05:28 +0100
+ -- Max Kellermann <max@duempel.org>  Wed, 04 Mar 2009 10:02:03 +0100
 
 libnetfilter-conntrack (0.0.97-1) unstable; urgency=low
 
