--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libnetfilter-conntrack (0.0.100-1) UNRELEASED; urgency=low
+
+  * new upstream release (Closes: #545915)
+
+ -- Max Kellermann <mk@cm4all.com>  Fri, 11 Sep 2009 13:24:52 +0200
+
 libnetfilter-conntrack (0.0.99-1) unstable; urgency=low
 
   [ Max Kellermann ]
