--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libnetfilter-conntrack (0.0.100-1) UNRELEASED; urgency=low
+libnetfilter-conntrack (0.0.100-1) unstable; urgency=low
 
   [ Max Kellermann ]
   * new upstream release (Closes: #545915)
@@ -9,7 +9,7 @@ libnetfilter-conntrack (0.0.100-1) UNRELEASED; urgency=low
   * Bump standards version
   * Move dbg package to section debug
 
- -- Alexander Wirt <formorer@debian.org>  Sun, 13 Sep 2009 20:43:42 +0200
+ -- Alexander Wirt <formorer@debian.org>  Thu, 17 Sep 2009 12:22:01 +0200
 
 libnetfilter-conntrack (0.0.99-1) unstable; urgency=low
 
