Update changelog and controlfile

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 libnetfilter-conntrack (0.0.101-1) unstable; urgency=low
 
   * New upstream version 
+  * Remove Max Kellermann from the list of uploaders 
+    (Thanks for your work on this package)
 
  -- Alexander Wirt <formorer@debian.org>  Sat, 30 Jan 2010 18:08:16 +0100
 
