--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libnetfilter-conntrack (0.9.1-1) unstable; urgency=low
+
+  * New upstream version 
+
+ -- Alexander Wirt <formorer@debian.org>  Thu, 03 Mar 2011 22:56:04 +0100
+
 libnetfilter-conntrack (0.0.101-1) unstable; urgency=low
 
   * New upstream version 
