--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libnetfilter-conntrack (1.0.0-1) unstable; urgency=low
+
+  * New upstream version 
+
+ -- Alexander Wirt <formorer@debian.org>  Thu, 05 Jan 2012 09:57:23 +0100
+
 libnetfilter-conntrack (0.9.1-1) unstable; urgency=low
 
   * New upstream version (Closes: #616097)
