--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 libnetfilter-conntrack (1.0.1-1) UNRELEASED; urgency=low
 
   * new upstream version
+  * bump standards version
+  * don't use brace expansion in .install file
 
  -- Alexander Wirt <formorer@debian.org>  Sat, 02 Jun 2012 09:58:20 +0200
 
