--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libnetfilter-conntrack (1.0.3-1) experimental; urgency=low
+
+  * [e2c323b] Imported Upstream version 1.0.3
+
+ -- Alexander Wirt <formorer@debian.org>  Sat, 18 May 2013 20:51:10 +0200
+
 libnetfilter-conntrack (1.0.2-1) experimental; urgency=low
 
   [ Maykel Moya ]
